Added proper tester for searchers

--- a/test/stringer/Makefile
+++ b/test/stringer/Makefile
@@ -5,8 +5,8 @@ SRC_DIR=../../src/stringer
 SEARCHER_DIR=$(SRC_DIR)/searcher
 SEARCHER_INCLUDE=$(SEARCHER_DIR)/searcher.cpp
 
-naive_searcher_test: 
-	$(CC) $(CFLAGS) naive_searcher_test.cpp -o naive_searcher_test.out $(SEARCHER_DIR)/naive_searcher.cpp $(SEARCHER_INCLUDE)
+searcher_test: 
+	$(CC) $(CFLAGS) searcher_test.cpp -o searcher_test.out $(SEARCHER_DIR)/naive_searcher.cpp $(SEARCHER_DIR)/kmp_searcher.cpp $(SEARCHER_INCLUDE)
 
 clean:
 	rm -f *.out
